tests/NormalTests/paczka1/fuzzy1/72876188.err
Error in line 1: A302 A302 18,6
Error in line 9: YJDEo A347 87,3
Error in line 6: ss4sBuy A751 48,2
Error in line 25: YJDEo A347 69,0
Error in line 27: ss4sBuy A302 93,1
